--- a/index.html
+++ b/index.html
@@ -5,19 +5,6 @@
   <title>สำหรับแบมนะะ 😸</title>
   <style>
     body {
-      <audio id="bgm" autoplay loop>
-  <source src="bgm.mp3" type="audio/mpeg">
-</audio>
-
-<script>
-  // บางเบราว์เซอร์จะไม่ให้ autoplay ต้องให้ user คลิกก่อน
-  document.addEventListener('click', function () {
-    const bgm = document.getElementById('bgm');
-    bgm.volume = 0.7; // เสียงเบาๆ (0.0 - 1.0)
-    bgm.play().catch(() => {});
-  }, { once: true });
-</script>
-
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
@@ -25,6 +12,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      overflow: hidden;
     }
 
     .card {
@@ -37,20 +25,16 @@
       text-align: center;
       display: none;
       animation: fadeIn 0.6s ease;
+      position: relative;
+      z-index: 2;
     }
 
     .card.active {
       display: block;
     }
 
-    h1 {
-      color: #ff4d6d;
-    }
-
-    p {
-      font-size: 18px;
-      line-height: 1.6;
-    }
+    h1 { color: #ff4d6d; }
+    p { font-size: 18px; line-height: 1.6; }
 
     button {
       margin-top: 25px;
@@ -69,6 +53,16 @@
       transform: scale(1.05);
     }
 
+    .music-control {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+
+    .music-control input[type="range"] {
+      width: 100%;
+      margin-top: 8px;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
@@ -84,9 +78,36 @@
       50% { transform: scale(1.2); }
       100% { transform: scale(1); }
     }
+
+    /* หัวใจลอย */
+    .floating-heart {
+      position: absolute;
+      bottom: -50px;
+      font-size: 24px;
+      animation: floatUp 6s linear forwards;
+      opacity: 0.8;
+      z-index: 1;
+      pointer-events: none;
+    }
+
+    @keyframes floatUp {
+      from {
+        transform: translateY(0) scale(1);
+        opacity: 1;
+      }
+      to {
+        transform: translateY(-110vh) scale(1.5);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
+
+  <!-- 🎵 เพลงพื้นหลัง -->
+  <audio id="bgm" loop>
+    <source src="bgm.mp3" type="audio/mpeg">
+  </audio>
 
   <!-- หน้า 1 -->
   <div class="card active" id="page1">
@@ -96,6 +117,15 @@
       เพราะจริงๆ เรามีเรื่องอยากจะบอกน่ะ
       แต่สัญญาเราอย่างนึงนะ ถ้าไม่โอเคบอกตรงๆนะ
     </p>
+
+    <div class="music-control">
+      🎵 เพลง: 
+      <button onclick="toggleMusic()">เปิด/ปิด</button>
+      <br>
+      🔊 ความดัง:
+      <input type="range" min="0" max="1" step="0.01" value="0.2" onchange="setVolume(this.value)">
+    </div>
+
     <button onclick="nextPage(2)">ไปต่อ ➜</button>
   </div>
 
@@ -128,14 +158,56 @@
   </div>
 
   <script>
+    const bgm = document.getElementById('bgm');
+    let isPlaying = false;
+
     function nextPage(pageNumber) {
       document.querySelectorAll('.card').forEach(card => {
         card.classList.remove('active');
       });
       document.getElementById('page' + pageNumber).classList.add('active');
     }
+
+    function toggleMusic() {
+      if (bgm.paused) {
+        bgm.play().catch(() => {});
+        isPlaying = true;
+      } else {
+        bgm.pause();
+        isPlaying = false;
+      }
+    }
+
+    function setVolume(val) {
+      bgm.volume = val;
+    }
+
+    // เริ่มเพลงหลัง user คลิกครั้งแรก
+    document.addEventListener('click', function () {
+      bgm.volume = 0.2;
+      bgm.play().catch(() => {});
+      startHearts();
+    }, { once: true });
+
+    // สร้างหัวใจลอย
+    function startHearts() {
+      setInterval(createHeart, 800);
+    }
+
+    function createHeart() {
+      const heart = document.createElement('div');
+      heart.className = 'floating-heart';
+      heart.textContent = ['❤️','💖','💗','💘','💕'][Math.floor(Math.random()*5)];
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.fontSize = (20 + Math.random()*20) + 'px';
+      heart.style.animationDuration = (4 + Math.random()*4) + 's';
+      document.body.appendChild(heart);
+
+      setTimeout(() => {
+        heart.remove();
+      }, 8000);
+    }
   </script>
 
 </body>
 </html>
-
