--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       padding: 40px;
       border-radius: 20px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      max-width: 420px;
+      max-width: 425px;
       width: 90%;
       text-align: center;
       display: none;
@@ -38,7 +38,7 @@
     p {
       font-size: 18px;
       line-height: 1.9;
-      max-width: 380px;
+      max-width: 425px;
       margin: 0 auto;
       text-align: left;
       letter-spacing: 0.2px;
@@ -118,40 +118,43 @@
 
   <!-- หน้า 1 -->
   <div class="card active" id="page1">
-    <h1>ว่างายย</h1>
+    <h1>ว่าไงง แบมม</h1>
     <p>
-      เราทำเว็บเล็กๆ นี้ขึ้นมา <br>
-      เพราะจริงๆ เรามีเรื่องอยากจะบอกน่ะ <br><br>
-
-      แต่สัญญาเราอย่างนึงนะ <br>
+      เราทำเว็บเล็กๆนี้ขึ้นมา <br>
+      เพราะจริงๆเรามีเรื่องอยากจะบอกน่ะ <br>
+      แต่สัญญาเราอย่างนึงนะ<br>
       ถ้าไม่โอเคบอกตรงๆนะ
     </p>
 
     <div class="music-control">
       🎵 เพลง:
-      <button onclick="toggleMusic()">เปิด/ปิด</button>
+      <button onclick="toggleMusic()">⏯️/⏸️</button>
       <br>
       🔊 ความดัง:
       <input type="range" min="0" max="1" step="0.01" value="0.2" onchange="setVolume(this.value)">
     </div>
 
-    <button onclick="nextPage(2)">ไปต่อ ➜</button>
+    <button onclick="nextPage(2)">กดดูอีกก ➜</button>
   </div>
 
   <!-- หน้า 2 -->
   <div class="card" id="page2">
-    <h1>เราเตรียมเว็บนี้ ไว้สำหรับวันนี้เลยละ</h1>
+    <h1>เราเตรียมเว็บนี้ <br>
+        ไว้สำหรับวันนี้เลยละ</h1>
     <p>
-      เราไม่รู้ว่าแบมคิดกับเรายังไงนะ แต่เรามองแบมดีมากๆ <br>
-      ตั้งแต่วันแรกที่เราได้คุยกัน หลังจากนั้นทุกวันของเราก็แฮปปี้สุดๆ <br><br>
+      เราไม่รู้ว่าแบมคิดกับเรายังไงนะ<br>
+      แต่เรามองแบมดีมากๆ <br><br>
+      ตั้งแต่วันแรกที่เราได้คุยกัน <br>
+      หลังจากนั้นทุกวันของเราก็แฮปปี้สุดๆ <br><br>
 
-      อยากให้แบมมั่นใจเยอะๆนะ เธอน่ารักสุดๆเลยละ มั่นใจเข้าไว้นะ <br><br>
+      อยากให้แบมมั่นใจเยอะๆนะ <br>
+      เธอน่ารักสุดๆเลยละ มั่นใจเข้าไว้นะ <br><br>
 
-      จริงๆ เราอยากไปเที่ยวกับแบมมากๆเลยละะ แต่ไม่เป็นไรร <br>
-      ไว้โอกาสอื่นก็ได้เสมอเลยย
+      จริงๆ เราอยากไปเที่ยวกับแบมมากๆเลยละะ<br>
+      แต่ไม่เป็นไรร ไว้โอกาสอื่นก็ได้เสมอเลยย
     </p>
 
-    <button onclick="nextPage(3)">ไปต่ออีกนิด ➜</button>
+    <button onclick="nextPage(3)">ดูอีกหน้านึงน้าา ➜</button>
   </div>
 
   <!-- หน้า 3 -->
@@ -161,18 +164,18 @@
     <p>
       เราคิดกับแบมมากกว่าเพื่อน แต่เราก็ไม่กล้าบอกน่ะ <br><br>
 
-      เราเลยถือโอกาสวันนี้บอกแบม <br>
-      เราขอโทษด้วยนะ ถ้ามันทำให้แบมรู้สึกผิดหวังหรืออึดอัด <br><br>
+      เราเลยถือโอกาสวันนี้บอกแบม เราขอโทษด้วยนะ <br>
+      ถ้ามันทำให้แบมรู้สึกผิดหวังหรืออึดอัด <br><br>
 
       เราคิดว่าเราค่อนข้างชัดเจนกับแบมมากๆ <br>
       แต่ก็ยังกล้าๆกลัวๆว่าแบมจะอึดอัดมั้ย <br><br>
 
-      เอาเป็นว่าา เราชอบแบมนะ มากๆเลย <br>
-      อยากไปเที่ยวด้วยมากๆ 😸
+      เอาเป็นว่าา เราชอบแบมนะ ชอบมากๆเลยละ <br>
+      อยากไปเที่ยวด้วยมากๆ หวังว่าแบมจะให้โอกาสเรานะ😸
     </p>
 
     <p style="margin-top:20px; text-align:center;">
-      สุขสันวาเลนไทน์นะ 💌
+      สุขสันต์วันวาเลนไทน์นะคับ 💌
     </p>
   </div>
 
